--- a/portfolio.html
+++ b/portfolio.html
@@ -72,17 +72,18 @@
                     <hr>
                     <section class="row">
                         <figure class="col-md-6">
-                            <h5>Quiz project</h5>
-                            <a href="https://github.com/TylerPetri/Code-Quiz.git" class="link">Github repo</a>
-                            <a href="https://tylerpetri.github.io/Code-Quiz/" target="_blank"><img class="img-fluid mx-auto my-3 d-block" src="Assets/Quiz.png" alt="Quiz project"/></a>
-                        </figure>
-                        <figure class="col-md-6">
                             <h5>Weather API project</h5>
                             <a href="https://github.com/TylerPetri/Weather-search-3.0.git" class="link">Github repo</a>
                             <a href="https://tylerpetri.github.io/Weather-search-3.0/" target="_blank"><img class="img-fluid mx-auto my-3 d-block" src="Assets/WeatherSearch.png" alt="Weather search project"/></a>
                         </figure>
                         <figure class="col-md-6">
-                            <img class="img-fluid mx-auto my-3 d-block" src="https://via.placeholder.com/350" alt="placeholder"/>
+                            <h5>Quiz project</h5>
+                            <a href="https://github.com/TylerPetri/Code-Quiz.git" class="link">Github repo</a>
+                            <a href="https://tylerpetri.github.io/Code-Quiz/" target="_blank"><img class="img-fluid mx-auto my-3 d-block" src="Assets/Quiz.png" alt="Quiz project"/></a>
+                        </figure>
+                        <figure class="col-md-6">
+                            <h5>API team project (ongoing)</h5>
+                            <img class="img-fluid mx-auto my-3 d-block" src="Assets/Project(ongoing).PNG" alt="API project"/>
                         </figure>
                         <figure class="col-md-6">
                             <img class="img-fluid mx-auto my-3 d-block" src="https://via.placeholder.com/350" alt="placeholder"/>
