--- a/Contact.html
+++ b/Contact.html
@@ -93,7 +93,7 @@
                     <br>
                     <a href="https://www.linkedin.com/in/tyler-petri-051155206/" target="_blank" class="link">LinkedIn profile</a>
                     <br>
-                    <a href="Assets/Resume/CV.pdf" class="link">Resume PDF</a>
+                    <a href="Assets/Resume/CV.pdf" target="_blank" class="link">Resume PDF</a>
                 </div>
                 <hr>
                 <section class="container">
