--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,12 @@
         font-family:'satisfy';
         font-size:120%;
     }
+
+    footer {
+        border-top: 5px solid rgb(245, 206, 236); 
+        background-color: rgb(241, 142, 180); 
+        margin-top: 180px;
+    }
 </style>
 
 <body>
@@ -97,7 +103,7 @@
     
 
 
-            <footer class="position-sticky pt-3 bottom-0" style="border-top: 5px solid rgb(245, 206, 236); background-color: rgb(241, 142, 180); margin-top: 180px;">
+            <footer class="position-sticky pt-3 bottom-0">
                 <article class="container d-flex justify-content-center">
                     <p style="color:pink">@Copyrighted</p>
                 </article>
