--- a/Contact.html
+++ b/Contact.html
@@ -16,9 +16,21 @@
     background-repeat:no-repeat;
     background-attachment: fixed;
     background-size: cover;
-  }
+    }
+
+    nav {
+        z-index: 10; 
+        background-color: rgb(95, 134, 46);
+    }
+
     .nav-link {
         color: pink;
+    }
+
+    .card {
+        border-radius: 0; 
+        max-width: 500px;  
+        background-color: rgb(95, 134, 46);
     }
 
     .container .form-label {
@@ -28,7 +40,7 @@
 
     .form-control {
         background-color: #F9D8A7 !important;
-        font-family: satisfy;
+        font-family: 'satisfy';
         font-weight: bold;
     }
 
@@ -56,13 +68,23 @@
         font-size:120%;
     }
 
+    button {
+        border-radius: 0; 
+        color: pink; 
+        background-color: rgb(34, 55, 119);
+    }
+
+    footer {
+        border-top: 5px solid rgb(245, 206, 236); 
+        background-color: rgb(241, 142, 180); 
+        margin-top: 180px;
+    }
     ;
 </style>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark position-sticky top-0"
-        style="z-index: 10; background-color: rgb(95, 134, 46);">
+    <nav class="navbar navbar-expand-lg navbar-dark position-sticky top-0">
         <section class="container-fluid">
             <a class="navbar-brand ms-3" href="index.html" id="name">Tyler</a>
             <ul class="nav justify-content-end">
@@ -79,9 +101,9 @@
         </section>
     </nav>
 
-    <main class="card mt-5 mx-4" style="border-radius: 0; max-width: 500px;  background-color: rgb(95, 134, 46);">
+    <main class="card mt-5 mx-4">
         <section class="container">
-            <h5 class="card-title pt-4 ms-1">Contact</h5>
+            <h5 class="card-title pt-4 ms-1"><b>Contact</b></h5>
             <hr>
             <section class="card-body">
                 <div class="container">
@@ -112,15 +134,14 @@
                     </article>
                 </section>
                 <article class="mb-3">
-                    <button type="submit" class="btn mt-3"
-                        style="border-radius: 0; color: pink; background-color: rgb(34, 55, 119);">Send</button>
+                    <button type="submit" class="btn mt-3">Send</button>
                 </article>
             </section>
         </section>
     </main>
 
 
-    <footer class="position-sticky pt-3 bottom-0" style="border-top: 5px solid rgb(245, 206, 236); background-color: rgb(241, 142, 180); margin-top: 180px;">
+    <footer class="position-sticky pt-3 bottom-0">
         <div class="container d-flex justify-content-center">
             <p style="color:pink">@Copyrighted</p>
         </div>
