--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     background-size: cover;
   }
 
+  #name {
+        color:pink; 
+        font-weight:bold
+    }
+
   nav {
     z-index: 10; 
     background-color: rgb(95, 134, 46);
@@ -68,7 +73,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark position-sticky top-0">
     <section class="container-fluid">
-      <a class="navbar-brand ms-3" href="index.html">Tyler</a>
+      <a class="navbar-brand ms-3" href="index.html" id="name">Tyler</a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
           <a class="nav-link" href="index.html"><b>About me</b></a>
