--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <article class="card-body">
             <p class="card-text">
                 Might have watched too much anime in my lifetime, but who's counting. And thanks 
-                to that, I developped a passion for fun food and worked in a restaurant kitchen for 6 months! Now
+                to that, I developed a passion for fun food and worked in a restaurant kitchen for 6 months! Now
                 chopping is second nature and my food is fresh half the time!
                 <br><br>
                 Although military style kitchen work passes the time, coding brings more platforms and I don't want to take
