--- a/Contact.html
+++ b/Contact.html
@@ -68,7 +68,7 @@
         font-size:120%;
     }
 
-    button {
+    .btn {
         border-radius: 0; 
         color: pink; 
         background-color: rgb(34, 55, 119);
