updated portfolio with project

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,6 +78,11 @@
                     <hr>
                     <section class="row">
                         <figure class="col-md-6">
+                            <h5>Employee tracker database</h5>
+                            <a href="https://github.com/TylerPetri/Employee-Tracker2.0.git" target="_blank" class="link">Git hub repo</a>
+                            <a href="https://www.youtube.com/watch?v=VTN-o95zSMI&feature=youtu.be" target="_blank" class="link"><img class="img-fluid mx-auto my-3 d-block" src="Assets/youtubeLink.PNG" alt="500 javascript lines"/></a>
+                        </figure>
+                        <figure class="col-md-6">
                             <h5>Get me employed project</h5>
                             <a href="https://github.com/TeamCircleAlpha/GetMeEmployed.git" target="_blank" class="link">Git hub repo</a>
                             <a href="https://teamcirclealpha.github.io/GetMeEmployed/" target="_blank"><img class="img-fluid mx-auto my-3 d-block" src="Assets/Project(ongoing).PNG" alt="API project"/></a>
@@ -91,9 +96,6 @@
                             <h5>Quiz</h5>
                             <a href="https://github.com/TylerPetri/Code-Quiz.git" target="_blank" class="link">Github repo</a>
                             <a href="https://tylerpetri.github.io/Code-Quiz/" target="_blank"><img class="img-fluid mx-auto my-3 d-block" src="Assets/Quiz.png" alt="Quiz project"/></a>
-                        </figure>
-                        <figure class="col-md-6">
-                            <img class="img-fluid mx-auto my-3 d-block" src="https://via.placeholder.com/350" alt="placeholder"/>
                         </figure>
                         <figure class="col-md-6">
                             <img class="img-fluid mx-auto my-3 d-block" src="https://via.placeholder.com/350" alt="placeholder"/>
