--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
                         <figure class="col-md-6">
                             <h5>Mysql/Handlebars project</h5>
                             <a href="https://github.com/TylerPetri/burger.git" target="_blank" class="link">Github repo</a>
-                            <a href="https://glacial-taiga-08008.herokuapp.com/" target="_blank"><img class="img-fluid mx-auto my-3 d-block" src="Assets/burgers.PNG" alt="Burgers mysql handlebars project"/>
+                            <a href="https://glacial-taiga-08008.herokuapp.com/" target="_blank"><img class="img-fluid mx-auto my-3 d-block" src="Assets/burgers.PNG" alt="Burgers mysql handlebars project"/></a>
                         </figure>
                         <figure class="col-md-6">
                             <h5>Employee tracker database</h5>
